--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -63,7 +63,11 @@
       footer svg {
         width: 2%;
       }
-      #marquee {}
+      ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+      }
     </style>
     <title>Ya pasaron {{ diffDays }} días y faltan {{ missingDays }}</title>
   </head>
